# terraform_gcp_practice_step_by_step

./: .gitignore  makefile  pyproject.toml  readme.md  requirement.txt
.github/workflows/: 00_infra.yml  01_ci.yml  02_cd.yml  02_ci.yml  03_cd.yml  deploy.yml
deployment/: .env  Dockerfile  Dockerfile-db-init  docker-compose-dev-local.yml  docker-compose-prod.yml
deployment/terraform/: .terraform.lock.hcl  enable.tf  main.tf  output.tf  outputs.tf  prod.tfvars  terraform.tfvars  terraform.tfvars.tf  variable.tf  variables.tf
src/backend/: config.py  init_db.py  models.py  run.py
